Refactored Compiler jasmin command execution to use ProcessBuilder, added compiled Compiler and Interpreter classes